sponsors: fix alignment for silver and bronze ranks (#264)

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -1231,7 +1231,16 @@ table.table-align-middle > tbody > tr > td {
     max-height: 10em;
 }
 
-@media (min-width: 1000px) {
+.sponsor-gold {
+    display: flex;
+}
+
+.sponsor-gold > div {
+    margin: auto;
+}
+
+/* md breakpoint in bootstrap */
+@media (min-width: 992px) {
   .row.equal {
     display: flex;
     flex-wrap: wrap;
